# genesis_hand

./: .gitignore  CHECK-MODELS.bat  CLEAN_PORT.bat  ComfyUI图片处理分析.md  DEBUG-MODEL.bat  DIAGNOSE.bat  FIX-MODELS.bat  FIX-MODELS.ps1  FP4测试说明.md  GitHub上传步骤.md  GitHub仓库说明.md  INFINITETALK_ALL_FIXES.md  INFINITETALK_AUDIO_STATUS.md  INFINITETALK_DEPENDENCIES.md  INFINITETALK_DEPS_COMPLETE.md  INFINITETALK_FINAL_STATUS.md  INFINITETALK_MODELS_NEEDED.md  INFINITETALK_READY.md  INFINITETALK_SAMPLER_FIX.md  InfiniteTalk优化参数修复完成.md  InfiniteTalk优化参数分析.md  InfiniteTalk按钮诊断.md  InfiniteTalk点击无反应修复.md  InfiniteTalk视频有声音的真相.md  InfiniteTalk音频合并功能已添加.md  InfiniteTalk音频视频合成修复.md  MelBandRoformer模型设置说明.md  Python环境说明.md  QUICK-TEST.bat  README.md  README_I2V.md  RUN.bat  START_UI.bat  Setup-MelBandModel.ps1  TEST-COMPLETE.bat  TEST-NODES.bat  TEST-SCHEDULERS.bat  TEST-VIDEO.bat  UI优化完成总结.md  UI优化实施指南.md  (+73 more)
genesis/: DEBUG_NONETYPE_ERROR.md  ERROR_FIX_LOG.md  FIXES_APPLIED.md  I2V_FIXES_SUMMARY.md  INFINITETALK_FINAL_FIX.md  INFINITETALK_FIXES_APPLIED.md  INFINITETALK_OPTIMIZATION_PLAN.md  INFINITETALK_STUCK_FIX.md  QUICK_REFERENCE.md  SCHEDULER_ERROR_FIX.md  WAV2VEC_MODEL_GUIDE.md  analyze_workflow.py  test_infinitetalk_nodes.py
genesis/apps/: intelligent_vram_manager.py  ui_optimization_patch.py  wanvideo_gradio_app.py  wanvideo_gradio_app.py.backup  wanvideo_gradio_app.py.before_ui_refactor_20251114_113724
genesis/compat/: comfy_stub.py
genesis/core/: folder_paths.py
genesis/custom_nodes/Comfyui/: ComfyLiterals  ComfyUI-Crystools  ComfyUI-EddySevenResonance  ComfyUI-Impact-Pack  ComfyUI-KJNodes  ComfyUI-MMAudio  ComfyUI-Manager  ComfyUI-MelBandRoFormer  ComfyUI-MemoryCleaner  ComfyUI-PreviewImageNode  ComfyUI-QwenFrameSelector  ComfyUI-QwenVideo  ComfyUI-SecNodes_Ultra_Fast  ComfyUI-Segformer_Ultra_Fast  ComfyUI-TorchCompileSpeed  ComfyUI-UniversalBlockSwap  ComfyUI-VideoHelperSuite  ComfyUI-WanAnimatePreprocess  ComfyUI-WanVideoDecode-Standalone  (+34 more)
genesis/custom_nodes/Comfyui/ComfyUI-UniversalBlockSwap/: __init__.py  blockswap_optimizer.py  config_examples.json  nodes.py  pyproject.toml  requirements.txt
genesis/examples/: gradio_ui.py  start_advanced_server.py
genesis/utils/: triton_ops_stub.py
(+474 files in other folders)
